<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ SpaceHub - Designed and Developed by LPirro (Leonardo Pirro)
  ~ Copyright (C) 2023 Leonardo Pirro
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="launch_detail">Launch Detail</string>
    <string name="tab_launch_detail_overview">Overview</string>
    <string name="tab_launch_detail_mission">Mission</string>
    <string name="tab_launch_detail_vehicles">Vehicles</string>
    <string name="launch_image_content_description">Launch Image</string>
    <string name="add_to_calendar">Add to calendar</string>
    <string name="save_button">Save</string>
    <string name="save_button_remove">Remove</string>
    <string name="launchpad">Launchpad</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="total_launches">Total Launches</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="info">Info</string>
    <string name="maps">Maps</string>
    <string name="watch_live">Watch Live</string>
    <string name="country">Country</string>
    <string name="administrator">Administrator</string>
    <string name="founded">Founded</string>
    <string name="agency">Agency</string>
    <string name="agency_logo_content_description">Agency Logo</string>
    <string name="more">More</string>
    <string name="launch_trajectory">Launch Trajectory</string>
    <string name="full_screen">Go Full Screen</string>
    <string name="mission_patch_content_description">Mission Patch Image</string>
    <string name="mission_header_orbit">Orbit: %1$s</string>
    <string name="mission_header_type">Type: %1$s</string>
    <string name="mission_header_agency">Agency: %1$s</string>
    <string name="description">Description</string>
    <string name="launch_info">Launch Info</string>
    <string name="net">NET</string>
    <string name="window_start">Window Start</string>
    <string name="window_end">Window End</string>
    <string name="mission_details_are_not_available_for_this_launch">Mission details are not available for this launch</string>
    <string name="more_info">More Info</string>
    <string name="launch_updates">Updates</string>
    <string name="no_launch_updates_message">Currently there are no updates for this launch</string>
    <string name="rocket_image_content_description">Rocket Image</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="variant">Variant</string>
    <string name="height">Height</string>
    <string name="diameter">Diameter</string>
    <string name="leo_capacity">LEO Capacity</string>
    <string name="gto_capacity">GTO Capacity</string>
    <string name="thrust">Thrust</string>
    <string name="reusable">Reusable</string>
    <string name="stats">Stats</string>
    <string name="successful_launches">Successful Launches</string>
    <string name="consecutive_successful_launches">Consecutive Successful Launches</string>
    <string name="failed_launches">Failed Launches</string>
    <string name="cost_per_launch">Cost Per Launch</string>
    <string name="apogee">Apogee</string>
    <string name="serial">Serial Number</string>
    <string name="landing_type">Type</string>
    <string name="landing_location">Landing Location</string>
    <string name="past_launch_status">%1$s • On %2$s</string>
    <string name="launch_completed">Launch Completed</string>
    <string name="launch_in_flight">Launch In Flight</string>
    <string name="launch_failed">Launch Failed</string>

</resources>