<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="name,location,totalLaunches" />

        <TextView
            android:id="@+id/launchpadLabel"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginVertical="@dimen/margin_16dp"
            android:text="@string/launchpad"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/name"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintStart_toStartOf="@id/launchpadLabel"
            app:layout_constraintTop_toBottomOf="@id/launchpadLabel" />

        <TextView
            android:id="@+id/launchPadNameValue"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@+id/name"
            tools:text="Space Launch Complex 40" />

        <TextView
            android:id="@+id/location"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/location"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintStart_toStartOf="@id/launchpadLabel"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/launchPadLocationValue"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/location"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@+id/location"
            tools:text="Cape Canaveral, FL, USA" />

        <TextView
            android:id="@+id/totalLaunches"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/total_launches"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintStart_toStartOf="@id/launchpadLabel"
            app:layout_constraintTop_toBottomOf="@id/location" />

        <TextView
            android:id="@+id/launchPadTotalLaunchesValue"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/totalLaunches"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrier"
            app:layout_constraintTop_toTopOf="@+id/totalLaunches"
            tools:text="162" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:layout_marginEnd="@dimen/margin_14dp"
            android:layout_marginBottom="@dimen/margin_24dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/totalLaunches">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMaps"
                style="@style/Widget.Material3.Chip.Assist.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_6dp"
                android:text="@string/maps"
                app:chipIcon="@drawable/google_maps"
                app:chipIconTint="?attr/colorPrimary" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipInfo"
                style="@style/Widget.Material3.Chip.Assist.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_6dp"
                android:text="@string/info"
                app:chipIcon="@drawable/information_variant"
                app:chipIconTint="?attr/colorPrimary" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipWikipedia"
                style="@style/Widget.Material3.Chip.Assist.Elevated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_6dp"
                android:text="@string/wikipedia"
                app:chipIcon="@drawable/wikipedia"
                app:chipIconTint="?attr/colorPrimary" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>