<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~ SpaceHub - Designed and Developed by LPirro (Leonardo Pirro)
  ~ Copyright (C) 2023 Leonardo Pirro
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierAgency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="agencyName,agencyCountry,agencyAdministrator, agencyFounded, agencyTotalLaunches" />

        <TextView
            android:id="@+id/agencyLabel"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginVertical="@dimen/margin_16dp"
            android:text="@string/agency"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/agencyLogo"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:contentDescription="@string/agency_logo_content_description"
            android:scaleType="fitStart"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/agencyLabel"
            app:tint="?attr/colorOnSurface" />

        <TextView
            android:id="@+id/agencyName"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/name"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintStart_toStartOf="@id/agencyLabel"
            app:layout_constraintTop_toBottomOf="@id/agencyLogo" />

        <TextView
            android:id="@+id/agencyNameValue"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/agencyName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrierAgency"
            app:layout_constraintTop_toTopOf="@+id/agencyName"
            tools:text="SpaceX" />

        <TextView
            android:id="@+id/agencyCountry"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/country"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintStart_toStartOf="@id/agencyLabel"
            app:layout_constraintTop_toBottomOf="@id/agencyName" />

        <TextView
            android:id="@+id/agencyCountryValue"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/agencyCountry"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrierAgency"
            app:layout_constraintTop_toTopOf="@+id/agencyCountry"
            tools:text="USA" />

        <TextView
            android:id="@+id/agencyAdministrator"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/administrator"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintStart_toStartOf="@id/agencyLabel"
            app:layout_constraintTop_toBottomOf="@id/agencyCountry" />

        <TextView
            android:id="@+id/agencyAdministratorValue"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/agencyAdministrator"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrierAgency"
            app:layout_constraintTop_toTopOf="@+id/agencyAdministrator"
            tools:text="Elon Musk" />

        <TextView
            android:id="@+id/agencyFounded"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/founded"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintStart_toStartOf="@id/agencyLabel"
            app:layout_constraintTop_toBottomOf="@id/agencyAdministrator" />

        <TextView
            android:id="@+id/agencyFoundedValue"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/agencyFounded"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrierAgency"
            app:layout_constraintTop_toTopOf="@+id/agencyFounded"
            tools:text="2002" />

        <TextView
            android:id="@+id/agencyTotalLaunches"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/total_launches"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintStart_toStartOf="@id/agencyLabel"
            app:layout_constraintTop_toBottomOf="@id/agencyFounded" />

        <TextView
            android:id="@+id/agencyTotalLaunchesValue"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/agencyTotalLaunches"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrierAgency"
            app:layout_constraintTop_toTopOf="@+id/agencyTotalLaunches"
            tools:text="211" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/agencyButtonMore"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:text="@string/more"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/agencyTotalLaunches" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
