<?xml version="1.0" encoding="utf-8"?><!--
  ~ SpaceHub - Designed and Developed by LPirro (Leonardo Pirro)
  ~ Copyright (C) 2023 Leonardo Pirro
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/margin_16dp">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierLauncherStage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="netLabel,windowStartLabel,windowEndLabel" />

        <TextView
            android:id="@+id/launchInfoLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginVertical="@dimen/margin_16dp"
            android:text="@string/launch_info"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.lpirro.core.ui.view.LaunchStatusView
            android:id="@+id/launchStatusView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:minWidth="40dp"
            android:minHeight="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/launchInfoLabel" />

        <TextView
            android:id="@+id/launchStatusDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:textAppearance="?attr/textAppearanceBodyMedium"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/launchInfoLabel"
            app:layout_constraintTop_toBottomOf="@id/launchStatusView"
            tools:text="Launch status description" />

        <TextView
            android:id="@+id/netLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/net"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintStart_toStartOf="@id/launchInfoLabel"
            app:layout_constraintTop_toBottomOf="@id/launchStatusDescription" />

        <TextView
            android:id="@+id/netValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/netLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrierLauncherStage"
            app:layout_constraintTop_toTopOf="@+id/netLabel"
            tools:text="13 December 2022 • 22:16" />

        <TextView
            android:id="@+id/windowStartLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/window_start"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintStart_toStartOf="@id/launchInfoLabel"
            app:layout_constraintTop_toBottomOf="@id/netLabel" />

        <TextView
            android:id="@+id/windowStartValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/windowStartLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrierLauncherStage"
            app:layout_constraintTop_toTopOf="@+id/windowStartLabel"
            tools:text="13 December 2022 • 21:00" />

        <TextView
            android:id="@+id/windowEndLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/window_end"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintStart_toStartOf="@id/launchInfoLabel"
            app:layout_constraintTop_toBottomOf="@id/windowStartValue" />

        <TextView
            android:id="@+id/windowEndValue"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="@dimen/margin_16dp"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrierLauncherStage"
            app:layout_constraintTop_toTopOf="@+id/windowEndLabel"
            tools:text="13 December 2022 • 01:00" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
