<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ SpaceHub - Designed and Developed by LPirro (Leonardo Pirro)
  ~ Copyright (C) 2023 Leonardo Pirro
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_12dp"
    app:strokeWidth="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/margin_16dp">

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrierLauncherStage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="serialLabel, landingTypeLabel, landingLocationLabel, landingNameLabel" />

        <TextView
            android:id="@+id/launcherStageType"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16dp"
            android:layout_marginVertical="@dimen/margin_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Core" />

        <TextView
            android:id="@+id/serialLabel"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16dp"
            android:text="@string/serial"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintStart_toStartOf="@id/launcherStageType"
            app:layout_constraintTop_toBottomOf="@id/launcherStageType" />

        <TextView
            android:id="@+id/serialValue"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:gravity="end"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/serialLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrierLauncherStage"
            app:layout_constraintTop_toTopOf="@+id/serialLabel"
            tools:text="#1693" />

        <TextView
            android:id="@+id/landingTypeLabel"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/landing_type"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintStart_toStartOf="@id/launcherStageType"
            app:layout_constraintTop_toBottomOf="@id/serialLabel" />

        <TextView
            android:id="@+id/landingTypeValue"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:gravity="end"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/landingTypeLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrierLauncherStage"
            app:layout_constraintTop_toTopOf="@+id/landingTypeLabel"
            tools:text="Autonomous Spaceport Drone Ship" />

        <TextView
            android:id="@+id/landingLocationLabel"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12dp"
            android:text="@string/landing_location"
            android:textColor="?attr/colorOnSurfaceVariant"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/launcherStageType"
            app:layout_constraintTop_toBottomOf="@id/landingTypeLabel" />

        <TextView
            android:id="@+id/landingLocationValue"
            android:textAppearance="?attr/textAppearanceLabelLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:gravity="end"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintBottom_toBottomOf="@+id/landingLocationLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/barrierLauncherStage"
            app:layout_constraintTop_toTopOf="@+id/landingLocationLabel"
            tools:text="ASOG" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
